# rasyn

./: .dockerignore  .gitignore  Dockerfile  additions plan.txt  docker-compose.yml  final addition plan.txt  plan.text  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: data.yaml  graph_head.yaml  llm.yaml  planner.yaml  scorer.yaml  serve.yaml  verifier.yaml
demo/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
deploy/: config.env.example  deploy.sh  infrastructure.yaml  teardown.sh  update.sh  upload-models-from-pod.sh
docs/: API_INTEGRATION_GUIDE.md  retrotransformer_report.md
paper/: generate_plots.py  llm_v6_epochs.txt  llm_v6_loss_data.txt  rasyn_retrosynthesis.tex  raw_llm_v6_log.txt  raw_retro_v2_log.txt  retro_epochs_clean.txt  retro_v2_epochs.txt  retro_v2_full_epochs.txt  retro_v2_val_summaries.txt
rasyn/: __init__.py  events.py  gradio_app.py  schema.py
scripts/: bug_checks.py  build_augmented_dataset.py  build_augmented_llm_dataset.py  build_pretrain_dataset_fast.py  build_r_smiles_dataset.py  build_r_smiles_llm_dataset.py  create_test_split.py  debug_diagnose.py  debug_generate.py  debug_logits_check.py  debug_overfit.py  debug_tokenization.py  demo.py  download_and_index_full.py  download_data.py  ensemble_eval.py  eval_honest.py  eval_honest_rsmiles.py  eval_llm_external.py  eval_llm_tta.py  eval_retro.py  eval_retro_tta.py  eval_retro_v2.py  evaluate.py  evaluate_llm.py  finetune_llm.py  index_uspto_fast.py  index_uspto_full.py  index_uspto_reactions.py  inspect_weights.py  preprocess_all.py  (+12 more)
(+120 files in other folders)
